--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-PORT = 5000
-DB_NAME = db_school
-DB_USER = postgres
-DB_PASSWORD = 123123nik
-DB_HOST = localhost
-DB_PORT = 5432
-SECRET_KEY = mrshugar_the_best_teacher
+PORT=5000
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=123123nik
+DB_HOST=postgres
+DB_PORT=5432
+SECRET_KEY=mrshugar_the_best_teacher
